--- a/webstudy/HTML/01_overview.html
+++ b/webstudy/HTML/01_overview.html
@@ -20,6 +20,14 @@
 
 
  -->
+ <!--
+    VSCODE 단축키
+    1. 주석 : Ctrl + /
+    2. 라인 복사 : alt + shift + 방향키
+    3. 라인 삭제 : shift + delete
+    4. 라인 이동 : alt + 방향키
+
+ -->
 <!DOCTYPE html>
 <html>
     <head>
