--- a/webstudy/HTML/03_list.html
+++ b/webstudy/HTML/03_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,5 +62,33 @@
             <li>DQL &lt;</li>
             <li>TCL</li>
        </ol>
+
+       <!-- 
+
+            3. 개요 목록(description list)
+                1) 블록 레벨
+                2) 한 개요는 용어(단어)와 설명(개요)로 구성
+                3) 전체 개요 목록은 <dl> 태그로 구성
+                4) 용어(단어)는 <dt>태그로 구성하고, 설명(개요)는 <dd> 태그로 구성
+                5) <dl> : description list
+                5) <dt> : description term
+                5) <dd> : description description
+                         
+        -->
+        <h1>오징어 게임</h1>
+        <dl>
+            <dt>오픈</dt>
+            <dd>2021.09.17.</dd>
+            <dt>채널</dt>
+            <dd>넷플릭스</dd>
+            <dt>등장인물</dt>
+            <dd>
+                <ul>
+                    <li>기훈 역 (이정재)</li>
+                    <li>새벽 역 (정호연)</li>
+                    <li>덕수 역 (허성태)</li>
+                </ul>
+            </dd>
+        </dl>
 </body>
 </html>
