--- a/webstudy/CSS/03_inline.html
+++ b/webstudy/CSS/03_inline.html
@@ -14,6 +14,8 @@
                                             (남용금지, 가급적 사용 자제할 것*/
       }
     </style>
+    <!-- 자바 스크립트는 CSS를 거쳐 들어오면 inline방식으로 적용되므로
+    우선 순위가 높아 무조건 적용된다. -->
   </head>
   <body>
     <!-- 
