--- a/webstudy/CSS/07_class_id.html
+++ b/webstudy/CSS/07_class_id.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style> 
-        .primary{
-            background-color: bisque;
-            font-size: 32;
-        }
-        .first{
-            text-align: center;
-        }
-        .second{
-            font-weight: 900;
-        }
-        .third{
-            color: #fff;
-        }
-        #a{
-            color: crimson;
-        }
-        #b{
-            color: chocolate;
-        }
-        #c{
-            color: limegreen;
-        }
-        
+    <style>
+      div {
+        opacity: 0.5;
+      }
+      .primary {
+        background-color: bisque;
+        font-size: 32;
+      }
+      .first {
+        text-align: center;
+      }
+      .second {
+        font-weight: 900;
+      }
+      .third {
+        color: #fff;
+      }
+      #a {
+        color: crimson;
+      }
+      #b {
+        color: chocolate;
+      }
+      #c {
+        color: limegreen;
+      }
     </style>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- 
         class 속성
 
@@ -58,9 +59,9 @@
         4. 특정 요소는 하나의 id 속성 값만 가질 수 있음
         5. 선택자
             #아이디
-    -->  
+    -->
     <p id="a">Nice to meet you!</p>
     <p id="b">How are you?</p>
     <p id="c">I'm fine. Thank you.</p>
-</body>
+  </body>
 </html>
