--- a/webstudy/CSS/05_webfont.html
+++ b/webstudy/CSS/05_webfont.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- 
         1. <link> 태그를 이용한 구글 폰트 사용
             1) <link> 태그를 복붙
             2) CSS속성 font-family를 복붙
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
+      rel="stylesheet" />
     <style>
-        h1{
-            font-family: 'Noto Sans KR', sans-serif;
-        }
+      h1 {
+        font-family: "Noto Sans KR", sans-serif;
+      }
     </style>
     <!-- 
         2. @import를 이용한 구글 폰트 사용(*.css 파일 분리)
@@ -26,13 +28,11 @@
 
     -->
     <!-- CDN방식 -->
-    <link rel="stylesheet" href="05_webfont.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="05_webfont.css" />
+  </head>
+  <body>
     <h1>hello CSS</h1>
     <h2>hello CSS</h2>
     <p>만나서 반갑습니다.</p>
-    
-</body>
+  </body>
 </html>
