--- a/jspstudy/01_Servlet/src/main/webapp/ex07_naver_api/client.html
+++ b/jspstudy/01_Servlet/src/main/webapp/ex07_naver_api/client.html
@@ -81,7 +81,6 @@
 				/* 응답 */
 				dataType: 'json',  // xml, json 가능
 				success: function(resData){
-					console.log(resData);
 					$('#movies').empty();
 					$.each(resData.items, function(i, item){
 						var tr = $('<tr>');
@@ -142,8 +141,8 @@
 				<textarea id="text"></textarea>			
 			</div>
 		</div>
-		<div class="tranlate_btn_area" id="translate_btn">
-			<button>&gt;&gt;</button>
+		<div class="tranlate_btn_area">
+			<button id="translate_btn">&gt;&gt;</button>
 		</div>
 		<div class="target_area">
 			<div>
@@ -177,6 +176,26 @@
 		}
 		
 		fn_selectLang();
+		
+		
+		// 번역
+		$('#translate_btn').on('click', function(event){
+			$.ajax({
+				/* 요청 */
+				type: 'GET',
+				url: '/01_Servlet/PapagoServlet',
+				data: 'source=' + $('#source').val() + '&target=' + $('#target').val() + '&text=' + $('#text').val(),
+				/* 응답 */
+				dataType: 'json',
+				success: function(resData){
+					$('#translatedText').val(resData.message.result.translatedText);
+				},
+				error: function(jqXHR){
+					console.log('status : ' + jqXHR.status);
+					console.log('responseText : ' + jqXHR.responseText);
+				}
+			});
+		});
 		
 	</script>
 
